--- a/package.json
+++ b/package.json
@@ -2,8 +2,12 @@
   "name": "api",
   "version": "1.0.0",
   "type": "module",
+  "engines": {
+    "node": "14.x"
+  },
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
