--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "api",
+  "name": "cadastro-user-api",
   "version": "1.0.0",
   "type": "module",
   "engines": {
-    "node": "14.x"
+    "node": "22.x"
   },
   "main": "index.js",
   "scripts": {
