--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   },
   "main": "index.js",
   "scripts": {
+    "build": "prisma generate && npm run build",
+    "dev": "prisma generate && node index.js",
     "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
