--- a/package.json
+++ b/package.json
@@ -7,15 +7,11 @@
   },
   "main": "index.js",
   "scripts": {
-    "build": "prisma generate",  // Gera o Prisma Client durante o build
-    "dev": "prisma generate && node index.js",  // Gera o Prisma Client no ambiente de desenvolvimento
-    "start": "node index.js",  // Inicia a aplicação
+    "build": "prisma generate && npm run build",  // Garante que Prisma Client será gerado durante o build
+    "dev": "prisma generate && node index.js",  // Geração do Prisma Client também durante o desenvolvimento
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
   "dependencies": {
     "@prisma/client": "^6.1.0",
     "cors": "^2.8.5",
@@ -26,4 +22,5 @@
     "prisma": "^6.1.0"
   }
 }
+
 
