--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "main": "index.js",
   "scripts": {
     "build": "prisma generate && npm run build",  // Garante que Prisma Client será gerado durante o build
+    "postinstall": "prisma generate",  // Força a execução do Prisma Client após a instalação no Vercel
     "dev": "prisma generate && node index.js",  // Geração do Prisma Client também durante o desenvolvimento
     "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
